added scroll images functionality

--- a/index.html
+++ b/index.html
@@ -158,13 +158,24 @@
           </div>
           <!--  -->
           <div class="project project-odd">
-            <div class="project-image-container">
+            <div class="crypto-images-container project-image-container">
               <img
                 class="project-image"
                 src="./assets/crypto_screenshot_1.png"
                 alt="MarsRoverSite"
               />
+              <!-- <img
+                class="crypto-image"
+                src="./assets/crypto-image2.png"
+                alt="MarsRoverSite"
+              /> -->
+              <!-- <div class="image-navigation-bar"></div> -->
             </div>
+            <!-- <div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div> -->
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
@@ -395,6 +406,25 @@
         <div>Designed and built by Matthew Volny</div>
         <a href=""><img src="./assets/iconmonstr-code-fork-1.svg" alt="" /></a>
       </div>
+      <!--  -->
+      <div class="slideshow-container">
+        <img
+          class="slideshow-image"
+          src="./assets/crypto_screenshot_1.png"
+          alt="MarsRoverSite"
+        />
+        <img
+          class="slideshow-image"
+          src="./assets/crypto-image2.png"
+          alt="MarsRoverSite"
+        />
+        <div class="slideshow-nav-bar">
+          <div class="0"></div>
+          <div class="1"></div>
+          <div class="2"></div>
+        </div>
+      </div>
+      <!--  -->
     </div>
     <script src="./scripts.js"></script>
   </body>
