added colored background for profile image

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 to fully-featured application.
               </div>
               <div class="skills">
-                <div>Things I know</div>
+                <div>Things I know:</div>
                 <ul class="listed-skills-flex">
                   <li>Javascript</li>
                   <li>HTML/CSS</li>
@@ -139,7 +139,15 @@
               </div>
             </div>
             <div class="profile-image-container">
-              <!-- <img src="./assets/scooter-muppet.png" alt="" /> -->
+              <!-- <div class="profile-image-inner-container"> -->
+              <img src="./assets/scooter-muppet.png" alt="" />
+              <img
+                class="profile-image-background"
+                src="./assets/scooter-background.png"
+                alt=""
+              />
+              <!-- </div> -->
+              <!-- <div class="profile-image-background"></div> -->
             </div>
           </div>
         </section>
