rewrote project sections, rewrote contact me section

--- a/index.html
+++ b/index.html
@@ -118,15 +118,16 @@
           <div class="about-me-flex">
             <div class="intro-and-skills-flex">
               <div class="about-me-intro">
-                Hello, My name is Matthew! I am a former PhD scientist and
-                university instructor, who recently transitioned into a career
-                in software development. I am naturally inquisitive, comfortable
-                problem solving, and eager to learn new skills and technologies.
-                It brings me great joy to take a simple idea from rough sketch
-                to fully-featured application.
+                I am a former PhD scientist and university instructor, who
+                recently transitioned into a career in software development. I
+                am comfortable working in a primarily front-end role, though I
+                am interested in expanding my knowledge of server-side
+                programming as well. I am naturally inquisitive, comfortable
+                problem solving solving, and truly love transforming rough ideas
+                to fully-featured applications through code.
               </div>
               <div class="skills">
-                <div>Things I know:</div>
+                <div>What I know:</div>
                 <ul class="listed-skills-flex">
                   <li>Javascript</li>
                   <li>HTML/CSS</li>
@@ -153,7 +154,7 @@
         </section>
         <section id="portfolio">
           <div class="title">
-            <span class="number">2.</span> Some things I've built
+            <span class="number">2.</span> What I've built
           </div>
           <!--  -->
           <div class="project project-odd">
@@ -190,7 +191,7 @@
                 <div class="inset-tagline">Featured Project</div>
                 <div class="project-name">Crypto Dashboard</div>
                 <div class="description-odd">
-                  Interactive dashboard displaying up-to-the-minute prices,
+                  An Interactive dashboard displaying up-to-the-minute prices,
                   news, and charts for a user's cryptocurrency assets, and
                   thousands of other coins. Site data is derived from public
                   APIs, with animated charts made using either 'britecharts' or
@@ -234,7 +235,7 @@
                 <div class="inset-tagline">Featured Project</div>
                 <div class="project-name">Point-and-Click Adventure Game</div>
                 <div class="description-even">
-                  Point-and-click game where players explore an expansive map,
+                  A point-and-click game where players explore an expansive map,
                   collecting items and solving puzzles. Images are made
                   interactive using 'image-maps', navigation is accomplished
                   with 'react-router', and a SQL database is used to save
@@ -291,19 +292,11 @@
                 <div class="inset-tagline">Featured Project</div>
                 <div class="project-name">Chat App</div>
                 <div class="description-odd">
-                  Real-time chat application to schedule and have private
+                  A Real-time chat application to schedule and have private
                   conversation between two or more users. Socket connections are
                   made using a node server and 'socket.io', while user data -
                   including contacts and message histories - are stored in a
-                  noSQL database. Real-time chat application for scheduling
-                  private conversation between two or more users. Visitors enter
-                  their registration information, select a cartoon avatar, and
-                  once logged in, have
-                  <!-- access to a customized dashboard showing their contacts (with
-                  archived chat history) and contacts’ information. With the
-                  click of a button users can invite others to the site,
-                  expanding their contacts list and providing new chat
-                  opportunities. -->
+                  noSQL database.
                 </div>
               </div>
               <div class="tech-container">
@@ -341,20 +334,13 @@
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
-                <div class="project-name">Mars Learning Site</div>
+                <div class="project-name">Kids Learning Site</div>
                 <div class="description-even">
-                  Kids educational app for learning about Mars rover missions.
+                  An educational app for learning about Mars rover missions.
                   Faux 3-D animated globe built using CSS, interactive map
                   produced using NASA 'geoJSON' data and Javascript's 'canvas'
                   API, and dynamic timeline made using data from the NASA Mars
-                  Rover API. A kids educational app for learning about Mars.
-                  Users select a rover, view its journey (plotted using NASA
-                  geoJSON data), and interact with a map via clickable
-                  waypoints. Selection of the
-                  <!-- rover also makes visible an animated timeline showing entries
-                  for each year of its journey. These include the date, a
-                  headline, and photos taken by the rover and obtained by
-                  querying NASA’s Mars rover API. -->
+                  Rover API.
                 </div>
               </div>
               <div class="tech-container">
@@ -395,11 +381,12 @@
           </div>
         </section>
         <section id="contact" class="contact">
-          <div class="title"><span class="number">3.</span> Get In Touch</div>
+          <div class="title"><span class="number">3.</span>Get In Touch</div>
           <div class="contact-me-paragraph">
-            I am currently looking for new opportunities in software
-            development. So, whether you have a question or just want to say hi,
-            I'll try my best to get back to you. My Inbox is always open.
+            If you like my work, please reach out! I am currently looking for
+            new opportunities in web development, and would love to hear from
+            you. I can be reached via LinkedIn (link to the left), or via email
+            (button below). Thanks for visiting.
           </div>
           <div class="contact-me-button-container">
             <a class="hello-button" href="mailto:matthew.volny@gmail.com"
