improved project images scroll styling

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                     <img src="./assets/crypto-image-3.png" />
                   </div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
               </div>
 
