improved styling of even project container

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
-                <div class="project-name">Point-and-Click Adventure Game</div>
+                <div class="project-name">Adventure Game</div>
                 <div class="description-even">
                   A point-and-click game where players explore an expansive map,
                   collecting items and solving puzzles. Images are made
