added images for chat app and educational app

--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="./assets/crypto_screenshot_1.png" />
+                    <img src="./assets/crypto-image1-squared.png" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="./assets/crypto-image2.png" />
+                    <img src="./assets/crypto-image2-squared.png" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="./assets/crypto-image-3.png" />
+                    <img src="./assets/chat-image-1-squared.png" />
                   </div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <!-- <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div> -->
                 <div class="swiper-pagination"></div>
               </div>
 
@@ -293,21 +293,63 @@
               </div>
             </div>
             <div class="project-image-container">
-              <img
-                class="project-image"
-                src="./assets/game_screenshot_1.png"
-                alt="MarsRoverSite"
-              />
+              <!-- Swiper -->
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./assets/game-image1-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/game-image2-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/game-image3-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/game-image4-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/game-image5-squared.png" />
+                  </div>
+                </div>
+                <!-- <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-pagination"></div>
+              </div>
             </div>
           </div>
           <!--  -->
           <div class="project project-odd">
             <div class="project-image-container">
-              <img
-                class="project-image"
-                src="./assets/chat_app_screenshot.png"
-                alt="MarsRoverSite"
-              />
+              <!-- Swiper -->
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-1-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-2-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-3-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-4-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-5-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-6-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-7-squared.png" />
+                  </div>
+                </div>
+                <!-- <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-pagination"></div>
+              </div>
             </div>
             <div class="project-details">
               <div class="tagline">
@@ -394,11 +436,35 @@
               </div>
             </div>
             <div class="project-image-container">
-              <img
-                class="project-image"
-                src="./assets/marsRover_1.png"
-                alt="MarsRoverSite"
-              />
+              <!-- Swiper -->
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-1-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-2-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-3-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-4-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-5-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-6-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/mars-image-7-squared.png" />
+                  </div>
+                </div>
+                <!-- <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-pagination"></div>
+              </div>
             </div>
           </div>
         </section>
