added additional project images and improved styling of projects width

--- a/index.html
+++ b/index.html
@@ -168,13 +168,25 @@
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="./assets/crypto-image1-squared.png" />
+                    <img src="./assets/crypto-image-1-squared.png" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="./assets/crypto-image2-squared.png" />
+                    <img src="./assets/crypto-image-2-squared.png" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="./assets/chat-image-1-squared.png" />
+                    <img src="./assets/crypto-image-3-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/crypto-image-4-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/crypto-image-5-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/crypto-image-6-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/crypto-image-7-squared.png" />
                   </div>
                 </div>
                 <!-- <div class="swiper-button-next"></div>
