--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
               <div class="links links-odd">
                 <ul>
                   <li>
-                    <a class="project-link-image-container" href=""
+                    <a
+                      class="project-link-image-container"
+                      href="https://github.com/matthewvolny/Crypto_App"
                       ><img
                         src="./assets/icons8-github.svg"
                         target="_blank"
@@ -288,7 +290,7 @@
                   <li>
                     <a
                       class="project-link-image-container"
-                      href=""
+                      href="https://github.com/matthewvolny/Point-and-click-game"
                       target="_blank"
                       ><img src="./assets/icons8-github.svg" alt="github_icon"
                     /></a>
@@ -296,7 +298,7 @@
                   <li>
                     <a
                       class="project-link-image-container"
-                      href=""
+                      href="https://rocky-savannah-82037.herokuapp.com/"
                       target="_blank"
                       ><img src="./assets/icons8-external-link.svg" alt="" />
                     </a>
@@ -385,7 +387,9 @@
               <div class="links links-odd">
                 <ul>
                   <li>
-                    <a class="project-link-image-container" href=""
+                    <a
+                      class="project-link-image-container"
+                      href="https://github.com/matthewvolny/Chat-App"
                       ><img
                         src="./assets/icons8-github.svg"
                         target="_blank"
@@ -393,7 +397,9 @@
                     /></a>
                   </li>
                   <li>
-                    <a class="project-link-image-container" href=""
+                    <a
+                      class="project-link-image-container"
+                      href="https://chatworm.herokuapp.com/"
                       ><img
                         src="./assets/icons8-external-link.svg"
                         target="_blank"
@@ -431,7 +437,7 @@
                   <li>
                     <a
                       class="project-link-image-container"
-                      href=""
+                      href="https://github.com/matthewvolny/Mars-Rover-Learning-App"
                       target="_blank"
                       ><img src="./assets/icons8-github.svg" alt="github_icon"
                     /></a>
@@ -439,7 +445,7 @@
                   <li>
                     <a
                       class="project-link-image-container"
-                      href=""
+                      href="https://dulcet-druid-afa521.netlify.app/"
                       target="_blank"
                       ><img src="./assets/icons8-external-link.svg" alt="" />
                     </a>
