added media query to headline line space text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
         <div class="intro">
           <div class="lead-in">Hi there, my name is</div>
           <div class="name">Matthew Volny</div>
-          <div>and I create things with code.</div>
+          <div class="create-things-tagline">
+            and I create things with code.
+          </div>
           <div class="intro-blurb">
             As a former scientist and university instructor, I bring a deep
             curiosity and creative perspective to web development. Click the
