added hamburger dropdown navigation for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,35 @@
             </li>
           </ul>
         </nav>
+        <nav class="main-nav hamburger-nav">
+          <ul>
+            <li id="resume">
+              <a href="./public/Matthew Volny - Resume.pdf" target="_blank"
+                >Resume</a
+              >
+            </li>
+            <li class="hamburger">
+              <img src="./assets/hamburger.png" alt="" />
+            </li>
+          </ul>
+        </nav>
       </header>
+      <nav class="nav-dropdown">
+        <ul>
+          <li id="first-li-dropdown">
+            <a class="nav-button about" href="#about">About</a>
+          </li>
+          <li>
+            <a class="nav-button portfolio" href="#portfolio">Portfolio</a>
+          </li>
+          <li><a class="nav-button contact" href="#contact">Contact</a></li>
+          <li id="resume-dropdown">
+            <a href="./public/Matthew Volny - Resume.pdf" target="_blank"
+              >Resume</a
+            >
+          </li>
+        </ul>
+      </nav>
       <div class="sidebar">
         <ul>
           <li>
