added animation to hamburger icon

--- a/index.html
+++ b/index.html
@@ -76,14 +76,17 @@
         </nav>
         <nav class="main-nav hamburger-nav">
           <ul>
-            <li id="resume">
-              <a href="./public/Matthew Volny - Resume.pdf" target="_blank"
-                >Resume</a
-              >
+            <li>
+              <div id="nav-icon3">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
             </li>
-            <li class="hamburger">
+            <!-- <li class="hamburger">
               <img src="./assets/hamburger.png" alt="" />
-            </li>
+            </li> -->
           </ul>
         </nav>
       </header>
