--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css" />
+
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -172,8 +180,8 @@
                   <li>Node.js</li>
                   <li>React</li>
                   <li>Redux</li>
-                  <li>PostgreSQL</li>
                   <li>MongoDB</li>
+                  <li>PostgreSQL</li>
                 </ul>
               </div>
             </div>
