--- a/index.html
+++ b/index.html
@@ -543,13 +543,53 @@
         </section>
       </main>
       <div class="footer">
-        <div>Built by Matthew Volny</div>
-        <a
-          class="personal-site-github-link"
-          href="https://github.com/matthewvolny/Personal-Site"
-          target="_blank"
-          ><img src="./assets/iconmonstr-code-fork-1.svg" alt=""
-        /></a>
+        <div class="built-by">Built by Matthew Volny</div>
+        <!--  -->
+        <div class="footer-links">
+          <a
+            id="site-links-smaller-widths"
+            class="personal-site-links site-links-smaller-widths"
+            href="https://github.com/matthewvolny"
+            target="_blank"
+            ><img
+              class="sidebar-icon"
+              src="./assets/icons8-github.svg"
+              alt="github icon"
+          /></a>
+
+          <a
+            id="site-links-smaller-widths"
+            class="personal-site-links"
+            href="https://codepen.io/mvolny"
+            target="_blank"
+            ><img
+              class="sidebar-icon"
+              src="./assets/icons8-codepen.svg"
+              alt="codepen icon"
+          /></a>
+
+          <a
+            id="site-links-smaller-widths"
+            class="personal-site-links"
+            href="https://www.linkedin.com/in/matthew-volny-a12965138/"
+            target="_blank"
+            ><img
+              class="sidebar-icon"
+              src="./assets/icons8-linkedin.svg"
+              alt="linkedIn icon"
+          /></a>
+
+          <!--  -->
+          <a
+            class="personal-site-links"
+            href="https://github.com/matthewvolny/Personal-Site"
+            target="_blank"
+            ><img
+              class="personal-site-github-link"
+              src="./assets/iconmonstr-code-fork-1.svg"
+              alt=""
+          /></a>
+        </div>
       </div>
     </div>
     <!--  -->
