--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
 
@@ -204,6 +204,49 @@
           </div>
           <!--  -->
           <div class="project project-odd">
+            <div class="project-details">
+              <div class="tagline">
+                <div class="inset-tagline">Featured Project</div>
+                <div class="project-name">Crypto Dashboard</div>
+                <div class="description-odd">
+                  An Interactive dashboard displaying up-to-the-minute prices,
+                  news, and charts for a user's cryptocurrency assets, and
+                  thousands of other coins. Site data is derived from public
+                  APIs, with animated charts made using either 'britecharts' or
+                  'lightweight-charts'.
+                </div>
+              </div>
+              <div class="tech-container">
+                <ul class="tech tech-odd">
+                  <li>React</li>
+                  <li>Node.js</li>
+                  <li>PostgreSQL</li>
+                </ul>
+              </div>
+              <div class="links links-odd">
+                <ul>
+                  <li>
+                    <a
+                      class="project-link-image-container"
+                      href="https://github.com/matthewvolny/Crypto_App"
+                      ><img
+                        src="./assets/icons8-github.svg"
+                        target="_blank"
+                        alt="github_icon"
+                    /></a>
+                  </li>
+                  <li>
+                    <a class="project-link-image-container" href=""
+                      ><img
+                        src="./assets/icons8-external-link.svg"
+                        target="_blank"
+                        alt=""
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
             <div class="project-image-container">
               <!-- Swiper -->
               <div class="swiper mySwiper">
@@ -259,50 +302,6 @@
                 </div>
               </div> -->
               <!--  -->
-            </div>
-
-            <div class="project-details">
-              <div class="tagline">
-                <div class="inset-tagline">Featured Project</div>
-                <div class="project-name">Crypto Dashboard</div>
-                <div class="description-odd">
-                  An Interactive dashboard displaying up-to-the-minute prices,
-                  news, and charts for a user's cryptocurrency assets, and
-                  thousands of other coins. Site data is derived from public
-                  APIs, with animated charts made using either 'britecharts' or
-                  'lightweight-charts'.
-                </div>
-              </div>
-              <div class="tech-container">
-                <ul class="tech tech-odd">
-                  <li>React</li>
-                  <li>Node.js</li>
-                  <li>PostgreSQL</li>
-                </ul>
-              </div>
-              <div class="links links-odd">
-                <ul>
-                  <li>
-                    <a
-                      class="project-link-image-container"
-                      href="https://github.com/matthewvolny/Crypto_App"
-                      ><img
-                        src="./assets/icons8-github.svg"
-                        target="_blank"
-                        alt="github_icon"
-                    /></a>
-                  </li>
-                  <li>
-                    <a class="project-link-image-container" href=""
-                      ><img
-                        src="./assets/icons8-external-link.svg"
-                        target="_blank"
-                        alt=""
-                      />
-                    </a>
-                  </li>
-                </ul>
-              </div>
             </div>
           </div>
           <!--  -->
@@ -375,37 +374,6 @@
           </div>
           <!--  -->
           <div class="project project-odd">
-            <div class="project-image-container">
-              <!-- Swiper -->
-              <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-1-squared.png" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-2-squared.png" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-3-squared.png" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-4-squared.png" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-5-squared.png" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-6-squared.png" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/chat-image-7-squared.png" />
-                  </div>
-                </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
-                <div class="swiper-pagination"></div>
-              </div>
-            </div>
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
@@ -449,6 +417,37 @@
                     </a>
                   </li>
                 </ul>
+              </div>
+            </div>
+            <div class="project-image-container">
+              <!-- Swiper -->
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-1-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-2-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-3-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-4-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-5-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-6-squared.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./assets/chat-image-7-squared.png" />
+                  </div>
+                </div>
+                <!-- <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-pagination"></div>
               </div>
             </div>
           </div>
