many style changes related to the project description and image slideshow, added project resize script

--- a/index.html
+++ b/index.html
@@ -211,9 +211,15 @@
                 <div class="description-odd">
                   An Interactive dashboard displaying up-to-the-minute prices,
                   news, and charts for a user's cryptocurrency assets, and
-                  thousands of other coins. Site data is derived from public
-                  APIs, with animated charts made using either 'britecharts' or
-                  'lightweight-charts'.
+                  thousands of other coins.
+                  <span class="second-project-sentence"
+                    >Site data is derived from public APIs, with animated charts
+                    made using either 'britecharts' or
+                    'lightweight-charts'.</span
+                  >
+                  <span class="expand-project-button"
+                    >click to expand . . .</span
+                  >
                 </div>
               </div>
               <div class="tech-container">
